welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: type mismatch;
 found   : Unit
 required: Int
	while (1<2) {t=t+1}
        ^golomb:7: error: return outside method definition
	return 1
        ^